# schedule_project

./: .env.example  .gitignore  pyproject.toml  requirements.txt
config/: __init__.py  logger.py  settings.py
db/: alembic.ini  session.py
db/alembic/: env.py
db/alembic/versions/: 80248ada29a9_init_tables.py  e60dfa98caf5_init_tablles.py
db/crud/: __init__.py  crud.py
db/models/: __init__.py  models.py
db/tools/: __init__.py  tools.py
shared/: middleware.py  utils.py
tools/: __init__.py
tools/hash/: hash.py
web/: auth.py
web/routes/: auth.py
web/scripts/: create_admin.py
