[project]
name = "schedule-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.16.5",
    "bcrypt>=5.0.0",
    "environs>=14.3.0",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.42.0",
    "uvicorn>=0.37.0",
]
